[sass] fix accidentally left `$ekzo-spacing-unit`

--- a/source/styles/_settings.responsive.scss
+++ b/source/styles/_settings.responsive.scss
@@ -10,8 +10,8 @@
 $site-min-width: 930px;
 $site-max-width: 1280px;
 
-$site-padding-left:  $ekzo-spacing-unit;
-$site-padding-right: $ekzo-spacing-unit;
+$site-padding-left:  ekzo-spacing(1);
+$site-padding-right: ekzo-spacing(1);
 
 // ---------------------------------------
 // Breakpoints
